<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/headlines"
        android:contentDescription="@string/headlines"
        android:enabled="true"
        android:icon="@drawable/headlines"
        android:title="@string/headlines"
        app:showAsAction="always"

        />

    <item
        android:id="@+id/favourites"
        android:contentDescription="@string/saved"
        android:enabled="true"
        android:icon="@drawable/favourites"
        android:title="@string/saved"
        app:showAsAction="always" />

    <item
        android:id="@+id/sources"
        android:contentDescription="@string/sources"
        android:enabled="true"
        android:icon="@drawable/sources"
        android:title="@string/sources"
        app:showAsAction="always" />


</menu>