<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/menu_checked"
            app:titleCentered = "true"
            app:navigationIcon="@drawable/arrow_back_24px"
            app:expandedTitleTextAppearance="@style/TitLar"
            app:expandedTitleMarginBottom="18dp"
            app:title="@string/filters"
            android:background ="@color/primary_50" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleGroup"
        android:layout_width="345dp"
        android:layout_height="@dimen/common_spacing48"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/common_spacing16"
        android:layout_marginEnd="@dimen/common_spacing16"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:singleSelection = "true"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/popular"
            android:layout_width="115dp"
            android:layout_height="@dimen/common_spacing48"
            android:text = "@string/popular_post"
            style = "@style/Widget.Material3.Button.OutlinedButton"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/newButton"
            android:layout_width="115dp"
            android:layout_height="@dimen/common_spacing48"
            android:text = "@string/new_post"
            style = "@style/Widget.Material3.Button.OutlinedButton"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/relevant"
            android:layout_width="115dp"
            android:layout_height="@dimen/common_spacing48"
            android:text = "@string/relevant_post"
            style = "@style/Widget.Material3.Button.OutlinedButton"
            />




    </com.google.android.material.button.MaterialButtonToggleGroup>



    <TextView
        android:id="@+id/data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing16"
        android:layout_marginTop="@dimen/common_spacing36"
        android:text="@string/data"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleGroup" />

    <ImageView
        android:id="@+id/tab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/common_spacing16"
        android:contentDescription="@string/data"
        android:src="@drawable/today_24px"
        app:layout_constraintBottom_toBottomOf="@id/data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/data" />

    <TextView
        android:id="@+id/data_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@id/data"
        app:layout_constraintEnd_toStartOf="@id/tab"
        app:layout_constraintTop_toTopOf="@id/data"
        tools:text="выбранная дата" />

    <TextView
        android:id="@+id/language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing16"
        android:layout_marginTop="@dimen/common_spacing36"
        android:text="@string/language"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/data" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/common_spacing8"
        android:layout_marginStart="@dimen/common_spacing16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/language">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rus"
            android:layout_width="79dp"
            android:layout_height="@dimen/common_spacing40"
            android:text="@string/russian"
            android:checked="false"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:textSize="14sp"
            android:button="@color/white"
            android:background="@drawable/backchip"
            android:gravity="center"
           />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/en"
            android:layout_width="79dp"
            android:layout_height="@dimen/common_spacing40"
            android:text="@string/english"
            android:checked="false"
            android:textSize="14sp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:button="@color/white"
            android:background="@drawable/backchip"
            android:gravity="center"
            />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/de"
            android:layout_width="79dp"
            android:layout_height="@dimen/common_spacing40"
            android:text="@string/deutsch"
            android:checked="false"
            android:layout_marginEnd="4dp"
            android:textSize="14sp"
            android:button="@color/white"
            android:layout_weight="1"
            android:background="@drawable/backchip"
            android:gravity="center"
            />




</RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>